<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popUpFiltersFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".popUpFiltersFragment"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/compatibilitatxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Compatibilità"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/compatibilitatxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <CheckBox
                android:id="@+id/affinita1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/affinita1"
                app:layout_constraintTop_toBottomOf="@id/compatibilitatxt" />

            <CheckBox
                android:id="@+id/affinita2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/affinita2"/>

            <CheckBox
                android:id="@+id/affinita3"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/affinita3"/>

            <CheckBox
                android:id="@+id/affinita4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affinita2"/>


        </LinearLayout>



        <TextView
            android:id="@+id/budgetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Budget (€)"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id = "@+id/sliderRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/budgetTitle"
            android:valueFrom = "0"
            android:valueTo = "3000"
            android:stepSize = "100"
            app:values = "@array/rangeSlider"
            tools:ignore = "SpeakableTextPresentCheck"/>

        <TextView
            android:id="@+id/numPartecipanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Partecipanti"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/sliderRange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id = "@+id/sliderRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/numPartecipanti"
            android:valueFrom = "1"
            android:valueTo = "10"
            android:stepSize = "1"
            app:values = "@array/rangeSlider2"
            tools:ignore = "SpeakableTextPresentCheck"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveFilters_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salva"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            app:elevation = "8dp"
            android:layout_marginHorizontal="30dp"
            app:backgroundTint="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/sliderRange2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>